--- a/app/cn/paySuccess.html
+++ b/app/cn/paySuccess.html
@@ -3,31 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>支付成功</title>
-    <link type="text/css" href="css/bootstrap.css" rel="stylesheet"/>
-    <link type="text/css" href="css/bootstrap-combined.min.css" rel="stylesheet"/>
-    <link type="text/css" href="css/bootstrap-theme.css" rel="stylesheet"/>
-    <link type="text/css" href="css/animate.css" rel="stylesheet"/>
-    <script type="text/javascript" src="lib/jquery-2.0.0.min.js"></script>
-    <script type="text/javascript" src="lib/bootstrap.js"></script>
-    <script type="text/javascript" src="lib/min.slip.js"></script>
-    <script type="text/javascript" src="js/pay.js"></script>
-    <link type="text/css" href="css/pay.css" rel="stylesheet">
+    <link type="text/css" href="../css/bootstrap.css" rel="stylesheet"/>
+    <link type="text/css" href="../css/bootstrap-combined.min.css" rel="stylesheet"/>
+    <link type="text/css" href="../css/bootstrap-theme.css" rel="stylesheet"/>
+    <link type="text/css" href="../css/animate.css" rel="stylesheet"/>
+    <script type="text/javascript" src="../lib/jquery-2.0.0.min.js"></script>
+    <script type="text/javascript" src="../lib/bootstrap.js"></script>
+    <script type="text/javascript" src="../lib/min.slip.js"></script>
+    <script type="text/javascript" src="../js/pay.js"></script>
+    <link type="text/css" href="../css/pay.css" rel="stylesheet">
     <meta name="viewport" content="target-densitydpi=device-dpi, width=910px, user-scalable=no">
 </head>
 <body class="container-fluid top-control" onload="slipInit(0)">
 <section class="row">
     <div class="col-lg-12">
         <section class="text-center top-control-80">
-            <img src="img/yes.png">
-            <br/><br/><br/>
-            <span class="font-weight-bold big-font-35">支付成功！</span>
-            <br/><br/><br/>
-            <span class="count-amount big-font-90">27.51<span class="big-font text-color-y">PHP</span></span>
-            <br/><br/><br/>
+
+            <img src="../img/yes.png" style="width: 300px">
+            <br/><br/>
+            <span class="font-weight-bold big-font-40">支付成功！</span>
+            <br/><br/><br/><br/>
+            <span class="text-color-blue big-font-90" style="font-size: 120px">27.51<span class="big-font text-color-y">PHP</span></span>
+            <br/><br/><br/><br/><br/><br/><br/><br/>
             <div>
-                <a href="javaScript:void(0);" class="empty-btn-s"> 评一下 </a>
+                <a href="javaScript:void(0);" class="full-btn-s"> 评一下 </a>
                 <span class="text-color-g-b big-font-35 glyphicon glyphicon-pencil"></span>
             </div>
+            <br/><br/>
         </section>
         <br/>
         <div class="hr-height-tip top-control">
@@ -41,7 +43,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-3.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="../img/timg-3.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div><span class="text-color-g big-font-25" >旅游景点</span></div>
@@ -49,7 +51,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-4.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="../img/timg-4.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div><span class="text-color-g big-font-25" >旅游景点</span></div>
@@ -57,7 +59,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-5.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="../img/timg-5.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div><span class="text-color-g big-font-25" >旅游景点</span></div>
@@ -65,7 +67,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="../img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div><span class="text-color-g big-font-25" >旅游景点</span></div>
@@ -73,7 +75,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="../img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div><span class="text-color-g big-font-25" >旅游景点</span></div>
@@ -81,7 +83,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="../img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div><span class="text-color-g big-font-25" >旅游景点</span></div>
@@ -89,7 +91,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="../img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div><span class="text-color-g big-font-25" >旅游景点</span></div>
@@ -97,7 +99,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="../img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div><span class="text-color-g big-font-25" >旅游景点</span></div>
@@ -105,7 +107,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="../img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div><span class="text-color-g big-font-25" >旅游景点</span></div>
@@ -121,7 +123,7 @@
     </div>
     <div class="m-row discuss-box-border">
         <div class="m-col-sm-3">
-            <img class="circle-head-small sm-head-s" src="img/head.jpg"/>
+            <img class="circle-head-small sm-head-s" src="../img/head.jpg"/>
         </div>
         <div class="m-col-sm-6">
             <span class="big-font-30 font-weight-bold">山边的一只小龙虾</span><br/>
@@ -136,16 +138,16 @@
                 这次的大海很漂亮，我很喜欢。出了咖啡店就可以库弹道大海了，大海很漂亮，可以看到漂亮的贝壳~
             </p>
             <div class="discuss-box-img">
-                <img class="pic-bg-cell " src="img/timg.jpg">
-                <img class="pic-bg-cell" src="img/timg1.jpg">
-                <img class="pic-bg-cell" src="img/timg2.jpg">
+                <img class="pic-bg-cell " src="../img/timg.jpg">
+                <img class="pic-bg-cell" src="../img/timg1.jpg">
+                <img class="pic-bg-cell" src="../img/timg2.jpg">
             </div>
             <br/>
         </div>
     </div>
     <div class="m-row discuss-box-border">
         <div class="m-col-sm-3">
-            <img class="circle-head-small sm-head-s" src="img/head.jpg"/>
+            <img class="circle-head-small sm-head-s" src="../img/head.jpg"/>
         </div>
         <div class="m-col-sm-6">
             <span class="big-font-30 font-weight-bold">山边的一只小龙虾</span><br/>
@@ -160,9 +162,9 @@
                 这次的大海很漂亮，我很喜欢。出了咖啡店就可以库弹道大海了，大海很漂亮，可以看到漂亮的贝壳~
             </p>
             <div class="discuss-box-img">
-                <img class="pic-bg-cell " src="img/timg.jpg">
-                <img class="pic-bg-cell" src="img/timg1.jpg">
-                <img class="pic-bg-cell" src="img/timg2.jpg">
+                <img class="pic-bg-cell " src="../img/timg.jpg">
+                <img class="pic-bg-cell" src="../img/timg1.jpg">
+                <img class="pic-bg-cell" src="../img/timg2.jpg">
             </div>
         </div>
     </div>
@@ -176,19 +178,16 @@
                         <!--Java前端代码填充-->
                         <span class="big-font-50">￥1.35!</span>
                     </p>
-                    <p class="text-right form-txt-setting">
-                        来自XXXX
-                    </p>
                 </span>
-                <img src="./img/open.png" />
+                <img src="../img/open.png" />
             </div>
 
             <div class="top-control-150 text-center">
-                <a href="javascript:void(0)" onclick="closeBox()"> <img src="img/close.png"></a>
+                <a href="javascript:void(0)" onclick="closeBox()"> <img src="../img/close.png"></a>
             </div>
         </div>
         <div id="opposite" class="list flip in">
-            <img src="./img/box.png" />
+            <img src="../img/box.png" />
             <div class="top-control-150 text-center">
                 <a href="javascript:void(0)" onclick="flipClick()" class="big-font-50 big-button-yellow">
                     打开你的红包</a>
