--- a/app/en/payFail.html
+++ b/app/en/payFail.html
@@ -2,24 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>支付失败</title>
-    <link type="text/css" href="css/bootstrap.css" rel="stylesheet"/>
-    <link type="text/css" href="css/bootstrap-combined.min.css" rel="stylesheet"/>
-    <link type="text/css" href="css/bootstrap-theme.css" rel="stylesheet"/>
-    <script type="text/javascript" src="lib/jquery-2.0.0.min.js"></script>
-    <script type="text/javascript" src="lib/bootstrap.js"></script>
-    <script type="text/javascript" src="lib/min.slip.js"></script>
-    <script type="text/javascript" src="js/pay.js"></script>
-    <link type="text/css" href="css/pay.css" rel="stylesheet">
+    <title>Payment Fail</title>
+    <link type="text/css" href="../css/bootstrap.css" rel="stylesheet"/>
+    <link type="text/css" href="../css/bootstrap-combined.min.css" rel="stylesheet"/>
+    <link type="text/css" href="../css/bootstrap-theme.css" rel="stylesheet"/>
+    <script type="text/javascript" src="../lib/jquery-2.0.0.min.js"></script>
+    <script type="text/javascript" src="../lib/bootstrap.js"></script>
+    <script type="text/javascript" src="../lib/min.slip.js"></script>
+    <script type="text/javascript" src="../js/pay.js"></script>
+    <link type="text/css" href="../css/pay.css" rel="stylesheet">
     <meta name="viewport" content="target-densitydpi=device-dpi, width=910px, user-scalable=no">
 </head>
 <body class="container-fluid" onload="slipInit(1)">
 <section class="row">
     <div class="col-lg-12">
         <section class="text-center top-control-80">
-            <img src="img/error.png">
+            <img src="../img/error.png">
             <br/><br/><br/>
-            <span class="font-weight-bold big-font-50">支付失败！</span>
+            <span class="font-weight-bold big-font-50">Payment Failure！</span>
             <br/><br/><br/>
             <span class="fail-reason">
                 您无法支付您的账单，因为您的手机无法连接到网络
@@ -28,12 +28,12 @@
             <br/><br/>
             <div class="top-control-150">
                 <a href="javascript:void(0)" class="big-font-50 big-button-blue">
-                    再次尝试</a>
+                    Try Again</a>
             </div>
         </section>
         <br/>
         <div class="hr-height-tip top-control">
-            <span>目前打折</span>
+            <span>Discount Now</span>
         </div>
         <br>
         <div class="box-2">
@@ -43,7 +43,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title-y">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-3.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="../img/timg-3.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div class="row">
@@ -54,7 +54,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title-y">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-4.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="../img/timg-4.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div class="row">
@@ -65,7 +65,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title-y">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-5.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="../img/timg-5.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div class="row">
@@ -76,7 +76,7 @@
                     <section class="recommend-box">
                         <div class="recommend-box-content">
                             <span class="recommend-box-title-y">$4564</span>
-                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="img/timg-6.jpg"></a>
+                            <a href="javaScript:void(0)"><img class="recommend-box-img" src="../img/timg-6.jpg"></a>
                         </div>
                         <title-box class="font-weight-bold">海洋公园</title-box>
                         <div class="row">
