--- a/app/cn/pay.html
+++ b/app/cn/pay.html
@@ -8,6 +8,7 @@
     <link type="text/css" href="../css/bootstrap-theme.css" rel="stylesheet"/>
     <script type="text/javascript" src="../lib/jquery-2.0.0.min.js"></script>
     <script type="text/javascript" src="../lib/bootstrap.js"></script>
+    <script type="text/javascript" src="../lib/min.slip.js"></script>
     <script type="text/javascript" src="../js/pay.js"></script>
     <link type="text/css" href="../css/pay.css" rel="stylesheet">
     <meta name="viewport" content="target-densitydpi=device-dpi, width=910px, user-scalable=no">
@@ -89,7 +90,8 @@
         <div class="col-sm-12">
             <div class="col-sm-4 key-border-c-right" style="background-color: #545457" onclick="clickNumber(this)">.</div>
             <div class="col-sm-4 key-border-c-right" onclick="clickNumber(this)">0</div>
-            <div class="col-sm-4" style="background-color: #545457" onclick="clickNumber(this)">C</div>
+            <div class="col-sm-2" onclick="clickNumber(this)">D</div>
+            <div class="col-sm-2" style="background-color: #545457" onclick="hideInputComponent(this)">OK</div>
         </div>
     </div>
 
