--- a/app/en/pay.html
+++ b/app/en/pay.html
@@ -8,6 +8,7 @@
     <link type="text/css" href="../css/bootstrap-theme.css" rel="stylesheet"/>
     <script type="text/javascript" src="../lib/jquery-2.0.0.min.js"></script>
     <script type="text/javascript" src="../lib/bootstrap.js"></script>
+    <script type="text/javascript" src="../lib/min.slip.js"></script>
     <script type="text/javascript" src="../js/pay.js"></script>
     <link type="text/css" href="../css/pay.css" rel="stylesheet">
     <meta name="viewport" content="target-densitydpi=device-dpi, width=910px, user-scalable=no">
@@ -38,8 +39,9 @@
         <br/>
         <div class="top-control-50">
             <div class="input-group" id="acc-input-box">
-                <input type="number" class="form-control" placeholder="Please input the" aria-describedby="basic-addon2" onkeyup="amountChange(this)">
+                <input type="text" class="form-control" id="inputAmount" placeholder="Please input the" aria-describedby="basic-addon2" onkeyup="amountChange(this)">
                 <span class="php-big-circle">PHP</span>
+                <div id="div-input-customer" onclick="showInputComponent(this);"></div>
             </div>
         </div>
 
@@ -69,6 +71,29 @@
                     Payment</a>
         </div>
     </form>
+    <div class="row key-border-customer-hide" id="keyBorderM">
+        <div class="col-sm-12">
+            <div class="col-sm-4 key-border-c-right key-border-c-bottom" onclick="clickNumber(this)">1</div>
+            <div class="col-sm-4 key-border-c-right key-border-c-bottom" onclick="clickNumber(this)">2</div>
+            <div class="col-sm-4 key-border-c-bottom" onclick="clickNumber(this)">3</div>
+        </div>
+        <div class="col-sm-12">
+            <div class="col-sm-4 key-border-c-right key-border-c-bottom" onclick="clickNumber(this)">4</div>
+            <div class="col-sm-4 key-border-c-right key-border-c-bottom" onclick="clickNumber(this)">5</div>
+            <div class="col-sm-4 key-border-c-bottom" onclick="clickNumber(this)">6</div>
+        </div>
+        <div class="col-sm-12">
+            <div class="col-sm-4 key-border-c-right key-border-c-bottom" onclick="clickNumber(this)">7</div>
+            <div class="col-sm-4 key-border-c-right key-border-c-bottom" onclick="clickNumber(this)">8</div>
+            <div class="col-sm-4 key-border-c-bottom" onclick="clickNumber(this)">9</div>
+        </div>
+        <div class="col-sm-12">
+            <div class="col-sm-4 key-border-c-right" style="background-color: #545457" onclick="clickNumber(this)">.</div>
+            <div class="col-sm-4 key-border-c-right" onclick="clickNumber(this)">0</div>
+            <div class="col-sm-2" onclick="clickNumber(this)">D</div>
+            <div class="col-sm-2" style="background-color: #545457" onclick="hideInputComponent(this)">OK</div>
+        </div>
+    </div>
 </section>
 </body>
 </html>
