1.优化 版本3.0 自带键盘

--- a/app/cn/pay.html
+++ b/app/cn/pay.html
@@ -39,7 +39,7 @@
         <br/>
         <div class="top-control-50">
             <div class="input-group" id="acc-input-box">
-                <input type="text" class="form-control" id="inputAmount" readonly maxlength="10" placeholder="请输入您的金额" aria-describedby="basic-addon2"  onkeyup="amountChange(this)">
+                <input type="text" class="form-control" id="inputAmount" readonly="readonly" disabled="disabled" placeholder="请输入您的金额" aria-describedby="basic-addon2">
                 <span class="php-big-circle">PHP</span>
                 <div id="div-input-customer" onclick="showInputComponent(this);"></div>
             </div>
