--- a/app/cn/paySuccess.html
+++ b/app/cn/paySuccess.html
@@ -26,8 +26,8 @@
             <span class="text-color-blue big-font-90" style="font-size: 120px">27.51<span class="big-font text-color-y">PHP</span></span>
             <br/><br/><br/><br/><br/><br/><br/><br/>
             <div>
-                <a href="javaScript:void(0);" class="full-btn-s"> 评一下 </a>
-                <span class="text-color-g-b big-font-35 glyphicon glyphicon-pencil"></span>
+                <a href="javaScript:void(0);" class="full-btn-s"><span class="big-font-35 glyphicon glyphicon-pencil"></span>&nbsp; 评一下 </a>
+
             </div>
             <br/><br/>
         </section>
