--- a/app/en/pay.html
+++ b/app/en/pay.html
@@ -39,7 +39,7 @@
         <br/>
         <div class="top-control-50">
             <div class="input-group" id="acc-input-box">
-                <input type="text" class="form-control" id="inputAmount" readonly placeholder="Please input the" aria-describedby="basic-addon2" onkeyup="amountChange(this)">
+                <input type="text" class="form-control" id="inputAmount"  readonly="readonly" disabled="disabled" placeholder="Please input the" aria-describedby="basic-addon2">
                 <span class="php-big-circle">PHP</span>
                 <div id="div-input-customer" onclick="showInputComponent(this);"></div>
             </div>
