--- a/app/en/paySuccess.html
+++ b/app/en/paySuccess.html
@@ -26,7 +26,7 @@
             <span class="text-color-blue big-font-90" style="font-size: 120px">27.51<span class="big-font text-color-y">PHP</span></span>
             <br/><br/><br/><br/><br/><br/><br/><br/>
             <div>
-                <a href="javaScript:void(0);" class="full-btn-s"><span class="text-color-g-b big-font-35 glyphicon glyphicon-pencil"></span>&nbsp; Write reviews </a>
+                <a href="javaScript:void(0);" class="full-btn-s"><span class="big-font-35 glyphicon glyphicon-pencil"></span>&nbsp; Write reviews </a>
             </div>
             <br/><br/>
         </section>
