1.减少加载文件

--- a/app/cn/pay.html
+++ b/app/cn/pay.html
@@ -6,10 +6,8 @@
     <title>支付</title>
     <link type="text/css" href="../css/bootstrap.css" rel="stylesheet"/>
     <link type="text/css" href="../css/bootstrap-combined.min.css" rel="stylesheet"/>
-    <link type="text/css" href="../css/bootstrap-theme.css" rel="stylesheet"/>
     <script type="text/javascript" src="../lib/jquery-2.0.0.min.js"></script>
     <script type="text/javascript" src="../lib/bootstrap.js"></script>
-    <script type="text/javascript" src="../lib/min.slip.js"></script>
     <script type="text/javascript" src="../js/pay.js"></script>
     <link type="text/css" href="../css/pay.css" rel="stylesheet">
 </head>
@@ -55,7 +53,7 @@
 
         <div class="top-control-50">
             <span class="big-font">手续费费率:<money class="money-icon">￥</money></span>
-            <span class="big-font bottom-bord-black" id="fee">1%</span>
+            <span class="big-font-45" id="fee">1%</span>
         </div>
         <div class="top-control-80">
             <label class="big-font-50 count-amount">总计金额:</label>
